# stupid-os

./: .gitignore  Cargo.toml  build.rs
kernel/: Cargo.toml
kernel/src/: main.rs
src/: main.rs
